# neofft

./: .gitignore  CMakeLists.txt  README.md
data/: N=512、4096点的一维信号.xlsx
include/: neofft.hpp
script/: fft1.m  fft2.m
test/: CMakeLists.txt  rfft1_4096.cpp  rfft1_512.cpp
